# my-usermanager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.omo/: boulder.json
.omo/drafts/: fastapi-htmx-adapter.md  fastapi-htmx-basecoat-ui.md  my-auth-adapter.md
.omo/evidence/: fastapi-htmx-browser-qa.md
.omo/evidence/fastapi-htmx/: account-1280.ocr.txt  account-375.ocr.txt  account-768.ocr.txt  admin-users-1280.ocr.txt  admin-users-375.ocr.txt  admin-users-768.ocr.txt  admin-users-after-disable.ocr.txt  admin-users-after-enable.ocr.txt  auth-login-1280.ocr.txt  auth-login-375.ocr.txt  auth-login-unsupported-webauthn.ocr.txt  auth-register-768.ocr.txt  auth-register-unsupported-webauthn.ocr.txt  browser-qa-results.json  browser-qa-summary.json  consistency-results.json  fallback-nonsecure-results.json  final-git-state.txt  healthcheck.txt  screenshot-metadata.json  screenshot-ocr.json  screenshot-visual-review.json  screenshot-visual-review.md  shutdown-check.txt  source-design-audit.json
.omo/plans/: fastapi-htmx-adapter.md  fastapi-htmx-basecoat-ui.md  my-auth-adapter.md
.omo/start-work/: ledger.jsonl
examples/: __init__.py
examples/fastapi_htmx/: README.md  __init__.py  app.py  demo_passkeys.py  demo_usermanager.py  demo_users.py
examples/fastapi_htmx/static/: passkey.js
examples/fastapi_htmx/templates/: base.html
examples/fastapi_htmx/templates/account/: index.html
examples/fastapi_htmx/templates/auth/: _login_panel.html  _register_panel.html  login.html  register.html
examples/fastapi_htmx/templates/users/: _row.html  list.html
src/my_usermanager/: __init__.py  admin.py  manager.py  memory.py  models.py  permissions.py  stores.py  subjects.py
src/my_usermanager/adapters/: __init__.py  my_auth.py  my_auth_fastapi.py  sqlite.py
src/my_usermanager/adapters/fastapi_htmx/: __init__.py  auth.py  awaitables.py  config.py  forms.py  ids.py  protocols.py  responses.py  router.py  rows.py  static.py  templates.py
src/ny_usermanager/: __init__.py  memory.py  models.py  permissions.py  stores.py
tests/: test_admin.py  test_fastapi_htmx_adapter.py  test_fastapi_htmx_example.py  test_imports.py  test_manager.py  test_memory_stores.py  test_models.py  test_my_auth_adapter.py  test_my_auth_fastapi.py  test_my_auth_fastapi_registration.py  test_permissions.py  test_sqlite_adapters.py  test_subjects.py
tests/contracts/: test_audit_store_contract.py  test_grant_store_contract.py  test_role_store_contract.py  test_user_store_contract.py
(+6 files in other folders)
