[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-usermanager"
version = "0.1.0"
description = "Framework-neutral user management and authorization for Python applications."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "my-usermanager contributors" },
]
keywords = [
    "authorization",
    "rbac",
    "user-management",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.115",
    "pydantic>=2.10",
]
myauth = [
    "my-auth @ git+https://github.com/mikolaj92/my-auth",
]

[dependency-groups]
dev = [
    "basedpyright>=1.21",
    "pytest>=8",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_usermanager"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "D203",
    "D213",
    "CPY001",
    "FBT001",
    "FBT002",
    "TD002",
    "TD003",
    "FIX002",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "S603",
    "ARG",
    "PLR2004",
    "SLF001",
    "D",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]
